@@ -1,5 +1,6 @@
 - Nullable boolean columns default to use :boolean form_ui instead of :checkbox
 - Display the value set in options[:include_blank] for boolean columns when value is nil, to match the label in the form
+- Support :select_multiple in search_ui, and :draggable in form_ui and search_ui, as shorthands
 
 = 3.7.0
 - Drop support for rails < 5.2 and ruby < 2.5
